[BUGFIX] Add CSS float support for image/figure alignment
Images with float-left/float-right classes had margins but lacked
the actual float property. Figures had no float support at all.
The :align: directive option rendered as deprecated HTML attribute
instead of CSS classes, and was stripped from FigureNode entirely.

Fixes:
- Add float:left/right to img.float-left/img.float-right in _rst.scss
- Add figure float rules with max-width:50% and responsive breakpoint
- Map :align: option to CSS classes (float-left/float-right/align-center)
  in both image.html.twig and figure.html.twig templates
- Preserve :align: on FigureNode instead of stripping it
- Add .clear-both utility class alias for .cc

Resolves: #1172

--- a/packages/typo3-docs-theme/assets/sass/components/_images.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/_images.scss
@@ -17,4 +17,30 @@ figure {
     &:not(:first-child) {
         @extend .mt-3;
     }
+    &.float-left {
+        float: left;
+        margin-right: $spacer;
+        margin-bottom: $spacer;
+        max-width: 50%;
+    }
+    &.float-right {
+        float: right;
+        margin-left: $spacer;
+        margin-bottom: $spacer;
+        max-width: 50%;
+    }
+    &.align-center {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 575.98px) {
+    figure.float-left,
+    figure.float-right {
+        float: none;
+        max-width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
