--- a/packages/typo3-docs-theme/assets/sass/components/_rst.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/_rst.scss
@@ -33,10 +33,12 @@
         max-width: 100%;
         height: auto;
         &.float-left {
+            float: left;
             margin-right: $spacer;
             margin-bottom: $spacer;
         }
         &.float-right {
+            float: right;
             margin-left: $spacer;
             margin-bottom: $spacer;
         }
