--- a/packages/typo3-docs-theme/resources/public/css/theme.css
+++ b/packages/typo3-docs-theme/resources/public/css/theme.css
@@ -24700,6 +24700,32 @@ dl.command .command-arguments section {
 figure figcaption p:last-child {
   margin-bottom: 0;
 }
+figure.float-left {
+  float: left;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  max-width: 50%;
+}
+figure.float-right {
+  float: right;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  max-width: 50%;
+}
+figure.align-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 575.98px) {
+  figure.float-left,
+  figure.float-right {
+    float: none;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 span[id*=MathJax-Span] {
   color: #333333;
 }
@@ -24797,11 +24823,13 @@ article *:hover > a.headerlink, article *:hover > a.permalink, article *:hover .
 }
 .rst-content img.float-left,
 .rst-content object.float-left {
+  float: left;
   margin-right: 1rem;
   margin-bottom: 1rem;
 }
 .rst-content img.float-right,
 .rst-content object.float-right {
+  float: right;
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
@@ -26735,7 +26763,8 @@ section.confval-section {
   outline: none !important;
 }
 
-.cc {
+.cc,
+.clear-both {
   clear: both;
 }
 
